# advent_of_code

./: .gitignore  README.md  pyproject.toml
2015/python/: q01.py  q02.py  q03.py
2019/python/: q01.py  q02.py
2020/: q01.py  q02.py  q03.py
2020/Python/: q04.py  q05.py  q06.py  q07.py  q08.py  q10.py
2020/python/: q09.py
2021/Python/: q01.py  q04.py  q05.py  q07.py  q08.py  q09.py  q10.py
2021/python/: q02.py  q03.py  q06.py
2022/: advent.R  q01.R  q02.R  q03.R  q04.R  q06.R  q07.R  q07_example.in  q08.R  q09.R  q1.R  q10.R  q11.R  q11.in  q12.R  q18.R  q2.R  q3.R  q4.R  q5.R  q5.in  q6.R  q6.in
2022/Python/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py
2022/R/: q01.R  q05.R  q08.R  q15.R
2022/python/: q03.py  q07.py  q08.py  q11.py  q12.py
2023/Python/: tst.py
2023/python/: q01.py  q02.py  q03.py  q04.py  q06.py
2024/Python/: q02.py  q04.py  q06.py  q07.py  q09.py  q10.py  q11.py  tst.py
2024/python/: q01.py  q03.py  q05.py  q06.py  q08.py  q09.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  tst.py  utils.py
2024/python/q15_game/: q15_game.py
2025/: q01.py  q01.sample  q02.py  q03.py  q04.py  q05.py
