[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Really bad code"
authors = ["vincentvanderlinden <vlinden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
black = "^24.10.0"
scipy = "^1.14.1"
shapely = "^2.0.6"
matplotlib = "^3.9.4"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
